# VideoMAEv2

./: .env.sample  .pre-commit-config.yaml  engine_for_finetuning.py  engine_for_pretraining.py  extract_tad_feature.py  extract_vd_to_frames_by_xml.py  predict.py  pyproject.toml  requirements.txt  run_class_finetuning.py  run_mae_pretraining.py  run_video_test.py  train_test_add.py  train_test_split.py  vit_b_k710_it_fight_ft.sh
VideoMAEv2/: VideoMAEv2.py  __init__.py
VideoMAEv2/models/: __init__.py
dataset/: build.py  datasets.py  functional.py  loader.py  masking_generator.py  pretrain_datasets.py  rand_augment.py  random_erasing.py  transforms.py  video_transforms.py  volume_transforms.py
scripts/predict/: vit_s_k710_pred.sh
scripts/test/: vit_b_k710_test.sh
videomaev2/: __init__.py  config.py  utils.py  videomaev2.py
videomaev2/models/: modeling_finetune.py  modeling_pretrain.py
