[project]
name = "videomaev2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LEEJINJU-1214", email = "leejinju953@gmail.com"},
]
dependencies = [
    "numpy<2.0.0",
    "tensorboardX>=2.6.2.2",
    "tensorboard>=2.19.0",
    "torchvision>=0.20.0",
    "torch<2.6.0",
    "timm==0.4.12",
    "triton>=3.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["videomaev2"]  # 패키지 명시

[tool.setuptools.package-data]
"videomaev2" = ["models/*"]

[tool.pdm]
distribution = false

[project.optional-dependencies]
dev = [
    "open-clip-torch==2.12.0",
    "easydict>=1.13",
    "transformers>=4.46.3",
    "scipy>=1.10.1",
    "av>=12.3.0",
    "decord>=0.6.0",
    "einops>=0.8.0",
    "ruff>=0.9.1",
    "pre-commit>=3.5.0",
    "python-dotenv>=1.0.1",
    "diffusers>=0.32.2",
    "Pillow>=10.4.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "deepspeed>=0.16.2",
    "scikit-learn>=1.3.2",
    "accelerate>=1.0.1",
    "noise>=1.2.2",
    "moviepy>=1.0.3",
]

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "N", "I"]
ignore = ["F401", "F403", "F405","B007","N806","E722","N812","N999","N801"]

[tool.ruff.lint.isort]
length-sort = true

[tool.ruff.lint.pydocstyle]
convention = "google"